Rework ReferrerTest to avoid Jetty dependency